[B]1.0.4:[/B]
- oprava stahování - nebyla připojena přípona souboru
- přidáno listování filmů i mezi kategoriemi
- přidáno nastavení řazení filmů
[B]1.0.3:[/B]
- u stahování nyní vždy funguje notifikace
[B]1.0.2:[/B]
- oprava načítání titulků z munkvideo
[B]1.0.1:[/B]
- přidány seriály
[B]1.0.0:[/B]
Initial version