@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.module.stream.resolver"
        name="stream resolver"
-       version="1.5.1"
+       version="1.5.2"
        provider-name="Libor Zoubek">
   <requires>
-    <import addon="xbmc.python" version="1.0"/>
+    <import addon="xbmc.python" version="2.0" />
     <import addon="script.module.simplejson" version="2.0.10" />
   </requires>
   <extension point="xbmc.python.module"
