@@ -1,3 +1,5 @@
+[B]1.0.5:[/B]
+- oprava vyhledávání filmů #153
 [B]1.0.4:[/B]
 - oprava stahování - nebyla připojena přípona souboru
 - přidáno listování filmů i mezi kategoriemi
